# D-Va-GlycoML

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  run_train_test.sh
src/: __init__.py
src/D-Va-MS-pipeline/: 1-01-D-Va-step1-mzML-scan-info-count.py  1-01-D-Va-step1-mzML-scan-info.py  1-02-D-Va-step2-MGF-Rawconverter-to-pParse.py  1-02-D-Va-step2-MGF-info.py  1-02-D-Va-step2-MGF-select-with-mzML-info.py  1-04-D-Va-step4-protein-filter.py  1-05-D-Va-step5-Isotope.py  1-05-D-Va-step5-MGF-info-select-with-ID.py  1-06-D-Va-step6-peptide-third-score.py
src/deep_learning/: __init__.py  biLSTM.py  models.py  predict_by_sequence.py  predict_by_trained_model.py  predict_different_models.py  predict_different_models_background.py  predict_trained_model.py  run_model.py  sample_predict.py  train_model.py  train_model_GPUs.py  train_model_batch.py  train_model_cyno.py  train_model_human.py  train_model_iterate.py  train_model_transfer.py  trainer.py  trainer_GPUs.py
src/plot_figures_1.1/: Spe-Match-cos-sim-Test-01-HPT.txt  Spe-Match-cos-sim-Test-02-HPT.txt  Spe-Match-cos-sim-Test-03-HPT.txt  Test-1_HPT_Cos_Sim.py  Test-2_HPT_Cos_Sim.py  Test-3_HPT_Cos_Sim.py  train-1_top-1_epoch-50_test-1-2-3_batch-32_lr-2_04-Nov-2022.py  train-1_top-1_epoch-50_test-1_batch-8-16-32-64-128_lr-1-2-4-4-8_03-Nov-2022.py  train-1_train-11_top1_epoch-50_test-11_batch-32_lr-2_04-Nov-2022.py  train-1_train-21_top1_epoch-50_test-21_batch-32_lr-2_05-Nov-2022.py
src/plot_tools/: epochs_cos_sim_dif_tests_1.py  epochs_cos_sim_test_1.py  epochs_cos_sim_test_2.py  (+18 more)
(+119 files in other folders)
