[tool.poetry]
name = "d-va"
version = "0.1.0"
description = "Deep learning model for glycopeptides"
authors = [
  "Zhewei Liang <zliang@venn.bio>",
  "Norton Kitagawa <norton.kitagawa@venn.bio"
]
readme = "README.md"
packages = [{include = "src"}]

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117/"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
brain-isotopic-distribution = "*"
matplotlib = "*"
numpy = "*"
openpyxl = "*"
pandas = "*"
pyteomics = "*"
scikit-learn = "*"
seaborn = "*"
torch = [
  { markers = "platform_machine!='x86_64' or sys_platform=='darwin'", version = "1.13.1", source = "pypi" },
  { markers = "platform_machine=='x86_64' and sys_platform!='darwin'", version = "1.13.1+cu117", source = "torch" },
]
typer = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
